--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,11 +4,13 @@ server:
 spring:
   application:
     name: hmdp
+
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306
     username: root
     password: slf030621
+
   redis:
     host: 127.0.0.1
     port: 6379
@@ -19,8 +21,10 @@ spring:
         max-idle: 10
         min-idle: 1
         time-between-eviction-runs: 10s
+
   jackson:
     default-property-inclusion: non_null # JSON处理时忽略非空字段
+
   rabbitmq:
     host: localhost
     port: 5672
@@ -50,3 +54,11 @@ bloom:
     expectedInsertions: 200000
     falsePositiveRate: 0.01
     pageSize: 2000
+
+ai:
+  vision:
+    base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
+    chat-path: /chat/completions
+    api-key: sk-ff42bb6edbd84fc2911508949b05f507
+    model: qwen3-vl-30b-a3b-instruct
+    timeout-ms: 20000
